Rendering overflow issue

--- a/src/sass/_gamesurface.scss
+++ b/src/sass/_gamesurface.scss
@@ -11,6 +11,7 @@ svg#the-zone {
   margin: 0 auto;
   display: block;
   position: relative;
+  overflow: visible;
 
   stroke: white;
   stroke-width: 2;
